<?xml version="1.0" encoding="utf-8"?>
<ImageButton xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/btnNovaAbaItem"
    android:layout_width="36dp"
    android:layout_height="36dp"
    android:layout_marginStart="6dp"
    android:layout_marginTop="6dp"
    android:layout_marginBottom="6dp"
    android:background="?attr/selectableItemBackgroundBorderless"
    android:contentDescription="@string/browser_nova_aba_desc"
    android:src="@drawable/ic_add"
    app:tint="@color/on_primary" />
